flux/manifests/02-infrastructure/kube-prometheus-stack/namespace.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/kubernetes/kubernetes/master/api/openapi-spec/swagger.json
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-system
  labels:
    images/dockerhub: "true"
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
